tests/NormalTests/paczka1/small_fuzzy/30707315.err
Error in line 3: 2cTWWgdOvz6 S882 278,5
Error in line 6: Kt5x A586 71,4
Error in line 11: jQ7S3 A586 63,76
Error in line 8: Kt5x A56 57,3
